--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -462,7 +462,8 @@
                   </ng-container>
                 </div> 
               </div>
-              <div class="apply-cancel-filter" (click)="this.onPageChange(this.pagination);"><button>Áp dụng</button>
+              <div class="apply-cancel-filter">
+                <button  (click)="this.onPageChange(this.pagination);">Áp dụng</button>
               <button (click)="closeSearchMobile()">Hủy</button></div>
             </aside>
           </div>
