--- a/src/styles.css
+++ b/src/styles.css
@@ -21,4 +21,5 @@
 @import url('src/assets/css/responsive.css');
 
 @import url('src/assets/css/product-slider.css');
+@import url('src/assets/css/cart.css');
 
