--- a/src/app/product-grid/product-grid.component.css
+++ b/src/app/product-grid/product-grid.component.css
@@ -655,4 +655,24 @@
     .hidden-pc{
         visibility: visible ;
     }
+
+
+
+    .sidebar-bar-title {
+        color: #4e1414;
+        margin: auto;
+        font-size: 16px;
+        font-weight: 600; border-bottom:1px solid #e5e5e5;
+        margin-top: 20px;
+    }
+    .sidebar-bar-title h3 {
+        font-size: 16px;
+        letter-spacing: 0.5px;
+        border-bottom: 2px solid #e83f33;
+        display: inline-block;
+        margin-bottom: -1px;
+        padding-bottom: 8px;
+        font-weight: 600;
+    
+    }
 }
