--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -2,13 +2,12 @@
   <!-- Breadcrumbs -->
   <div class="breadcrumbs">
     <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <ul>
-            <li class="home"> <a title="Go to Home Page" routerLink="/">Home</a><span>&raquo;</span></li>
-            <li><strong>Yêu thích</strong></li>
-          </ul>
-        </div>
+      <div class="breadcrumb_dm">
+        <ul class="breadcrumb__list">
+          <li><i aria-hidden="true" class="fa fa-home"></i><span><i aria-hidden="true" class="fa fa-angle-right"></i></span> </li>
+          <li class="home"> <a title="Go to Home Page" [routerLink]="['/']">Trang chủ</a></li>
+          <li > <span><i aria-hidden="true" class="fa fa-angle-right"></i></span> <a title="Yêu thích"  >Yêu thích</a></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -17,13 +16,53 @@
   <section class="main-container col2-right-layout">
     <div class="main container">
       <div class="row">
-        <div class="col-main col-sm-12 col-xs-12">
-          <div class="my-account">
+        <div class=" co-main col-sm-12 col-xs-12">
+          <div class="cart">
             <div class="page-title">
               <h2>Danh sách yêu thích của tôi</h2>
             </div>
-            <div style="margin-top: 30px;" class="wishlist-item table-responsive">
-              <table class="col-md-12">
+            <div style="margin-top: 30px;" class="cart-products inline">
+              <div class="no-item-cart" *ngIf="itemsFavorite.length == 0">Bạn đang không có sản phẩm nào yêu thích.</div>
+              <div class="cart-p-item" *ngFor="let item of itemsFavorite">
+                <div class="cart-p-img"><img
+                    [src]='urlImg + item.image'
+                    alt="{{item.productName}}"></div>
+                <div class="cart-p-content"><a [routerLink]="['/chi-tiet']"  [queryParams]="{slug: item.productNameSlug}"
+                  class="cart-p-name">{{item.productName}}</a>
+                  <div class="cart-p-meta">
+                    <div class="cart-p-desc">
+                      <div class="collapse2">
+                        <div class="collapse-header" (click)="showDetailProduct($event,  item.id)"><i showDetailProduct id="{{'detail' + item.id}}" class="fa fa-angle-right"></i> Chi tiết sản phẩm <!----></div>
+                        <div id="{{'detailItem' + item.id}}" class="collapse-body" style="display: none;">
+                          <div class="short-desc" [innerHTML]="decodeURIComponent(item.content)" >                    
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="cart-p-price">{{item.price | currency : "VND"}}</div>
+                  </div>
+                  <div class="cart-p-actions">
+                      <button type="button" class="btn-add-cart" (click)="addToShopingCard(item)" ><i class="fa fa-shopping-cart"></i> &nbsp; Thêm giỏ hàng </button>
+   
+                    <div class="cart-p-remove" (click)="removeItemFavorite(item.id)">
+                      <svg width="14" height="16" viewBox="0 0 18 20" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1.5 5H3.16667H16.5" stroke="#005EC4" stroke-width="2" stroke-linecap="round"
+                          stroke-linejoin="round"></path>
+                        <path
+                          d="M5.66602 4.99984V3.33317C5.66602 2.89114 5.84161 2.46722 6.15417 2.15466C6.46673 1.8421 6.89066 1.6665 7.33268 1.6665H10.666C11.108 1.6665 11.532 1.8421 11.8445 2.15466C12.1571 2.46722 12.3327 2.89114 12.3327 3.33317V4.99984M14.8327 4.99984V16.6665C14.8327 17.1085 14.6571 17.5325 14.3445 17.845C14.032 18.1576 13.608 18.3332 13.166 18.3332H4.83268C4.39065 18.3332 3.96673 18.1576 3.65417 17.845C3.34161 17.5325 3.16602 17.1085 3.16602 16.6665V4.99984H14.8327Z"
+                          stroke="#005EC4" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        <path d="M7.33398 9.1665V14.1665" stroke="#005EC4" stroke-width="2" stroke-linecap="round"
+                          stroke-linejoin="round"></path>
+                        <path d="M10.666 9.1665V14.1665" stroke="#005EC4" stroke-width="2" stroke-linecap="round"
+                          stroke-linejoin="round"></path>
+                      </svg>
+                      XOÁ
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- <table class="col-md-12">
                 <thead>
                   <tr>
                     <th class="th-delate">Xóa</th>
@@ -43,8 +82,9 @@
                   </tr>
                  
                 </tbody>
-              </table>
-              <a *ngIf="itemsFavorite.length > 0" href="checkout.html" class="all-cart">Thêm tất cả vào giỏ hàng</a> </div>
+              </table> -->
+              <!-- <a *ngIf="itemsFavorite.length > 0" href="checkout.html" class="all-cart">Thêm tất cả vào giỏ hàng</a> -->
+             </div>
           </div>
         </div>
         <!-- <aside class="right sidebar col-sm-3 col-xs-12">
